.provarCaches/00D5f000005vwGkEAI/objects/rstk__soentusage__c.object
<CustomObject>
    <description>soentusage__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soentusage_socontent__r.Name &amp; rstk__soentusage_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount charged for the Entitlement.</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_date__c</fullName>
        <inlineHelpText>The date that the Entitlement was fulfilled.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_entprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entitled To Product</description>
        <inlineHelpText>The total quantity for this Contract and SO Line Product of those Products that the equipment sale entitled the Customer to.</inlineHelpText>
        <label>Entitled To Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details</relationshipLabel>
        <relationshipName>soentusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_entprodascat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Category for this Entitlement.</inlineHelpText>
        <label>Entitled To Category</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details (Entitled To Category)</relationshipLabel>
        <relationshipName>soentusages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_entprodasprodgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Product Group for this Entitlement.</inlineHelpText>
        <label>Entitled To Product Group</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details (Entitled To Product Group)</relationshipLabel>
        <relationshipName>soentusage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_entprodassubcat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Sub Category for this Entitlement.</inlineHelpText>
        <label>Entitled To Sub-Category</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details (Entitled To Sub-Category)</relationshipLabel>
        <relationshipName>soentusages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The quantity of the Entitlement fulfilled.</inlineHelpText>
        <label>Transaction Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_socontent__c</fullName>
        <inlineHelpText>The Entitlement for which this Usage record exists.</inlineHelpText>
        <label>Contract Entitlement</label>
        <referenceTo>rstk__socontent__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details</relationshipLabel>
        <relationshipName>soentusages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_socust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Client linked to this entitlement usage.</inlineHelpText>
        <label>Usage Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details</relationshipLabel>
        <relationshipName>soentusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Order Line from which the Entitlement was fulfilled.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details</relationshipLabel>
        <relationshipName>soentusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusage_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The warranty item covered.</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Details</relationshipLabel>
        <relationshipName>Contract_Entitlement_Usage_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Entitlement Usage Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Contract_Entitlement_Usage_Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__soentusage_soline__c</columns>
        <columns>rstk__soentusage_socontent__c</columns>
        <columns>rstk__soentusage_sowarr__c</columns>
        <columns>rstk__soentusage_entprod__c</columns>
        <columns>rstk__soentusage_date__c</columns>
        <columns>rstk__soentusage_quantity__c</columns>
        <columns>rstk__soentusage_amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Entitlement Usage Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Entitlement Usage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>